tooling/nargo_cli/tests/snapshots/execution_success/simple_program_addition/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) -> pub Field {
    x + 1
}
