tooling/nargo_cli/tests/snapshots/execution_success/simple_program_addition/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[simple_program_addition] Circuit output: 0x04
